--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "autoprefixer": "^10.4.20",
+    "ng-zorro-antd": "^18.1.1",
     "postcss": "^8.4.41",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.10",
